--- a/style.css
+++ b/style.css
@@ -1,56 +1,150 @@
+/* Reset di tutti i margini e i padding per tutti gli elementi */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Stile generale del corpo del documento */
 body {
-    background-color: rgb(201, 198, 198);
+    background-color: rgb(241, 241, 241);
     height: 100%;
     margin: 0 auto;
     width: 100%;
 }
 
+/* Stile dell'intestazione */
 header {
     background-color: white;
     width: 100%;
 }
 
+/* Contenitore dell'intestazione */
 .header-container {
     display: flex;
     align-items: center;
     padding: 5px 10px;
 }
 
+/* Stile del logo */
 .header-container img {
     height: 50px;
 }
 
+/* Stile del titolo principale */
 .header-container h1 {
     font-size: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     margin-left: 5px;
 }
 
+/* Stile dei bottoni generici */
 .button {
     border-radius: 5px;
     padding: 3px;
     color: #808080;
     border-width: 1px;
-
 }
 
+/* Stile del pulsante "Add task" */
 #task-button {
     background-color: #1E90FF;
     color: white;
     margin: 10px 5px 0 20px;
+    border-color: white;
 }
 
-.card-slide {
-    margin: 15px auto;
-    width: 60%;
+/* Stile del contenitore dei bottoni */
+.card-button {
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 50%;
     height: 40px;
     background-color: white;
     align-items: center;
+}
+
+/* Stile del contenitore della lista di cose da fare */
+.card-todo-list {
+    margin: 1px auto;
+    width: 50%;
+    height: 470px;
+    background-color: white;
+    align-items: center;
+}
+
+/* Stile della lista delle cose da fare */
+#list {
+    list-style-type: none;
+    padding-left: 20px;
+    padding-top: 30px;
+}
+
+/* Stile degli elementi della lista */
+.li-item {
+    margin: 15px 0;
+}
+
+/* Stile del triangolo verso il basso */
+.triangle-down {
+    font-size: 8px;
+    display: inline;
+}
+
+/* Stile delle categorie (titoli delle sezioni) */
+.categories {
+    margin-bottom: 20px;
+    display: inline;
+}
+
+/* Stile del simbolo "check" */
+.checked {
+    display: inline;
+    color: green;
+}
+
+/* Stile del simbolo "cross-mark" */
+.cross-mark {
+    color: red;
+}
+
+/* Stile dei paragrafi */
+p {
+    display: inline;
+}
+
+/* Stili riutilizzabili per le etichette */
+.editorial,
+.q1-goals,
+.recruiting,
+.mobile,
+.sales,
+.website {
+    background-color: #45ABEA;
+    color: white;
+    border-radius: 10px;
+    padding: 5px;
+    font-size: 10px;
+}
+
+/* Stili specifici per alcune etichette */
+.q1-goals {
+    background-color: #9C72E4;
+}
+
+.recruiting {
+    background-color: #64C0A9;
+}
+
+.mobile {
+    background-color: #F29E33;
+}
+
+.sales {
+    background-color: #B0C926;
+}
+
+.website {
+    background-color: #D863A1;
 }
